# spacerace

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  dummy_client.py  equations.tex  howtorun.txt  log_client.py  manned_spacecraft.py  runspacerace  spacerace.json
clients/: requirements.txt
clients/http/: client.py  dummy_client.py  manned_spacecraft.py  spawn_clients.py
clients/python/: client.py  client_vis.py  dummy_client.py  log_client.py  manned_spacecraft.py  spawn_clients.py  state_watcher.py  temp.py
clients/zmq/: ai_base.py  client.py  client_vis.py  dummy_client.py  log_client.py  manned_spacecraft.py  ship.py  spawn_clients.py
config/: spacerace.json
deployment/: build_all_containers.sh  docker-compose.yml
deployment/frontend/: Dockerfile
deployment/httpserver/: Dockerfile  uwsgi.ini  uwsgi_entrypoint.py
deployment/nginx/: nginx.conf
deployment/server/: Dockerfile
frontend/: Dockerfile  README.md  chaos-race.js  chaos-race.js.map  chaos-race.ts  entry.js  index.html  package.json  producer.js  server.js  server.ts  style.css  webpack.config.js  websocket-server.js
http/: api.py  factory.py  routes.py  uwsgi.ini  uwsgi_entrypoint.py
httpserver/: Dockerfile  app.py  helpers.py  settings.py  uwsgi.ini
mapbuilder/: Dockerfile  buildmap.py  requirements.txt
nginx/: Dockerfile  nginx.conf
physics/: engine.py  sandbox.py
server/: CMakeLists.txt  Dockerfile  argsort.hpp  controlthread.hpp  game.hpp  infothread.hpp  init.hpp  lobbythread.hpp  main.cpp  maps.hpp  network.hpp  numpy.hpp  physics.hpp  spacerace.json  stream.hpp  time.hpp  types.hpp
server/src/: CMakeLists.txt  game.hpp  game.hpp.orig  infothread.hpp  lobbythread.hpp  main.cpp  maps.hpp.orig  physics.hpp  time.hpp
srhttp/: app.py  error_handlers.py  exceptions.py  helpers.py  routes.py
